# FunVideoPlayer

./: README.md
FunVideoPlayer/: settings.gradle
FunVideoPlayer/app/: build.gradle
FunVideoPlayer/app/src/androidTest/java/com/clericyi/player/: ExampleInstrumentedTest.java
FunVideoPlayer/app/src/main/: AndroidManifest.xml
FunVideoPlayer/app/src/main/cpp/: CMakeLists.txt  audioencoder.cpp  mp3_encoder.h
FunVideoPlayer/app/src/main/cpp/audioencoder/: audioencoder.cpp  com_clericyi_player_Mp3Encoder.h  mp3_encoder.cpp  mp3_encoder.h
FunVideoPlayer/app/src/main/cpp/common/: CommonTools.h
FunVideoPlayer/app/src/main/cpp/ffmpeg/core/: accompany_decoder.cpp  accompany_decoder.h  accompany_decoder_controller.cpp  accompany_decoder_controller.h
FunVideoPlayer/app/src/main/cpp/ffmpeg/logic/: Mp3Decoder.cpp  com_clericyi_player_MainActivity.h  com_clericyi_player_Mp3Decoder.h  native-lib.cpp
FunVideoPlayer/app/src/main/cpp/lame/: depcomp  encoder.h  fft.h  l3side.h  lameerror.h  newmdct.h  quantize_pvt.h  reservoir.h  tables.h  util.h
FunVideoPlayer/app/src/main/cpp/lame/i386/: choose_table.nas  cpu_feat.nas  fft3dn.nas  fftfpu.nas  scalar.nas
FunVideoPlayer/app/src/main/cpp/lame/vector/: lame_intrin.h
FunVideoPlayer/app/src/main/java/com/clericyi/player/: FFmpegActivity.java  MainActivity.java  Mp3Decoder.java  Mp3Encoder.java  PermissionUtil.java
FunVideoPlayer/app/src/main/res/layout/: activity_main.xml
FunVideoPlayer/app/src/main/res/menu/: main.xml
FunVideoPlayer/app/src/main/res/values/: strings.xml
FunVideoPlayer/app/src/test/java/com/clericyi/player/: ExampleUnitTest.java
FunVideoPlayer/gradle/wrapper/: gradle-wrapper.properties
